database/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy: {}
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres
        name: postgres
        volumeMounts:
        - name: initdb
          mountPath: /docker-entrypoint-initdb.d/init-user-db.sh
          subPath: init-user-db.sh
      volumes:
        - name: initdb
          configMap:
            name: initdb
status: {}
